plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.3' // 2025년 8월 기준 최신 안정 버전 중 하나
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'kb-hack'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// 1. 웹 개발을 위한 기본 스타터
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// 2. 스프링 시큐리티 스타터 (새로 추가)
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// 3. MyBatis 연동을 위한 스타터
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'

	// 4. Flyway (DB 마이그레이션)
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-mysql'

	// 5. MySQL 데이터베이스 드라이버
	runtimeOnly 'com.mysql:mysql-connector-j'

	// 6. 개발 편의성을 위한 Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// 7. Redis (Spring Data Redis + Lettuce)
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// 8. Bean Validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// 9. websocket 지원
	implementation 'org.springframework.boot:spring-boot-starter-websocket'

	// 10. swagger - springdoc-openapi (Spring Boot 3.x 호환)
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

	// 11.  WebClient를 사용하기 위한 WebFlux 스타터 추가
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// 12. 크롤링 위한 라이브러리
	implementation 'org.jsoup:jsoup:1.15.3'
	implementation 'org.seleniumhq.selenium:selenium-java:4.11.0'
	implementation 'io.github.bonigarcia:webdrivermanager:5.4.1'

	// 테스트를 위한 기본 스타터
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'

	// mac M1 칩에서 Redis 사용 시 필요할 수 있는 네티 의존성 (운영 환경에서는 제외 가능)
	implementation 'io.netty:netty-resolver-dns-native-macos:4.1.68.Final:osx-aarch_64'
}

tasks.named('test') {
	useJUnitPlatform()
}
